--- a/layouts/partials/home/author.html
+++ b/layouts/partials/home/author.html
@@ -1,4 +1,13 @@
-<h1>{{ .Site.Params.author }}</h1>
+<h1 style = "font-size: 4.7rem;">{{ .Site.Params.author }}</h1>
+
+
+{{ if and (isset .Site.Params "jobtitle") (isset .Site.Params "employer") (isset .Site.Params "employerurl") }}
+<h1>
+  {{ .Site.Params.jobTitle }}
+  <a href="{{ .Site.Params.employerURL | safeURL }}">@{{ .Site.Params.employer }}</a>
+</h1>
+
+{{ end }}
 {{ if reflect.IsSlice .Site.Params.info }}
 <h2>{{ range .Site.Params.info }}{{.}}<br>{{ end}}</h2>
 {{ else }}
